# routes/index.js
@@ -1,22 +1,12 @@
 const express = require("express");
 const router = express.Router();
 const userRoute = require("./userRoutes");
-const courseRoute = require("./courseRoute");
-const enrollRoute = require("./enrollRoute");
 const docsRoute = require('./docs.route');
 
 const Routes = [
   {
     path: "/user",
     route: userRoute,
-  },
-  {
-    path: "/course",
-    route: courseRoute,
-  },
-  {
-    path: "/enrollment",
-    route: enrollRoute,
   },
   {
     path: '/docs',
